good_port_policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-443
spec:
  podSelector:
    matchLabels:
      app: webserver
  ingress:
  - ports:
    - port: 443
